# samantha

./: .gitignore  Makefile  README.md
agent/: .env.example  config.py  main.py  memory.db  memory.db-shm  memory.db-wal  requirements.txt
agent/api/: server.py
agent/core/: context.py  memory.py  orchestrator.py  planner.py  schemas.py
agent/tools/: browser.py  gmail.py  os_control.py  screen.py  wikipedia.py
agent/voice_io/: audio_bridge.py  stt.py  tts.py  windows_mic_bridge.py
audio-engine/: Cargo.toml
audio-engine/src/: capture.rs  ipc.rs  main.rs  vad.rs
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ChatView.tsx  HistoryPanel.tsx  LaunchPopup.tsx  MessageBubble.tsx  OverlayBar.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  VoiceButton.tsx
desktop/src/hooks/: useAgent.ts  useWebSocket.ts
desktop/src/store/: agentStore.ts
desktop/src/types/: index.ts
packaging/: samantha.service
