[package]
name    = "samantha-audio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "samantha-audio"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
base64             = "0.22"
clap               = { version = "4", features = ["derive"] }
cpal               = "0.15.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-vad         = "0.4"
