[package]
name    = "samantha-desktop"
version = "2.0.0"
edition = "2021"
description = "Samantha — Local AI Voice Assistant by ZenonAI"
authors     = ["ZenonAI <contact@zenonai.net>"]

[lib]
name       = "samantha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "samantha-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                      = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell         = "2"
tauri-plugin-notification  = "2"
tauri-plugin-autostart     = "2"
tauri-plugin-store         = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"], default-features = false }

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
